[gd_scene load_steps=14 format=2]

[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://textures/dev/_placeholder.png" type="Texture" id=2]
[ext_resource path="res://textures/doors/doorTitleL.png" type="Texture" id=3]
[ext_resource path="res://scripts/main.gd" type="Script" id=4]
[ext_resource path="res://textures/doors/doorTitleR.png" type="Texture" id=5]
[ext_resource path="res://fonts/jpix5.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://audio/door_close_open_lq.ogg" type="AudioStream" id=8]
[ext_resource path="res://audio/enemy_death_lq.ogg" type="AudioStream" id=9]
[ext_resource path="res://audio/_placeholder1.ogg" type="AudioStream" id=12]
[ext_resource path="res://scripts/ui/Doors.gd" type="Script" id=13]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 0 )

[sub_resource type="DynamicFont" id=3]
size = 50
font_data = ExtResource( 7 )

[node name="World" type="Node2D"]
pause_mode = 2
script = ExtResource( 4 )

[node name="debuginfo" type="VBoxContainer" parent="."]
margin_left = -472.0
margin_top = -472.0
margin_right = -313.0
margin_bottom = 494.0

[node name="LFPS" type="Label" parent="debuginfo"]
pause_mode = 2
margin_right = 159.0
margin_bottom = 14.0
text = "FPS"

[node name="LHasItem" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 18.0
margin_right = 159.0
margin_bottom = 32.0
text = "HasItem"

[node name="LCurrentItemID" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 36.0
margin_right = 159.0
margin_bottom = 50.0
text = "CurrentItemID"

[node name="LHPStart" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 54.0
margin_right = 159.0
margin_bottom = 68.0
text = "HP start"

[node name="LScore" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 72.0
margin_right = 159.0
margin_bottom = 86.0
text = "Score"

[node name="LHP" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 90.0
margin_right = 159.0
margin_bottom = 104.0
text = "HP"

[node name="LTimerAttack" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 108.0
margin_right = 159.0
margin_bottom = 122.0
text = "LTimerAttack"

[node name="LTimerPlayerDeathAnim" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 126.0
margin_right = 159.0
margin_bottom = 140.0
text = "LTimerPlayerDeathAnim"

[node name="LTimerEnemyDeathAnim" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 144.0
margin_right = 159.0
margin_bottom = 158.0
text = "LTimerEnemyDeathAnim"

[node name="LTimerLabelPause" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 162.0
margin_right = 159.0
margin_bottom = 176.0
text = "LTimerLabelPause"

[node name="debuginfo" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 180.0
margin_right = 159.0
margin_bottom = 194.0
text = "LTimerLabelPause"

[node name="LNoHit" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 198.0
margin_right = 159.0
margin_bottom = 212.0
text = "LNoHit"

[node name="LTimelineSize" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 216.0
margin_right = 159.0
margin_bottom = 230.0
text = "LTimelineSize"

[node name="LTimelineID" type="Label" parent="debuginfo"]
pause_mode = 2
margin_top = 234.0
margin_right = 159.0
margin_bottom = 248.0
text = "LTimelineID"

[node name="Camera2D" type="Camera2D" parent="."]
pause_mode = 2
current = true

[node name="Player" parent="." groups=["Player"] instance=ExtResource( 1 )]
pause_mode = 1
z_index = 10

[node name="Doors" type="Node2D" parent="."]
position = Vector2( -6.10352e-05, 0 )
script = ExtResource( 13 )

[node name="UsableItemPos" type="Position2D" parent="."]
position = Vector2( 320, 232 )

[node name="UsableItemPos2" type="Position2D" parent="."]
position = Vector2( -128, 0 )

[node name="EnemyProgress" type="ProgressBar" parent="."]
margin_left = -268.0
margin_top = 288.0
margin_right = 268.0
margin_bottom = 320.0
custom_styles/fg = SubResource( 1 )
custom_styles/bg = SubResource( 2 )
max_value = 10.0
percent_visible = false

[node name="HeartUI" type="TextureRect" parent="."]
margin_left = -344.0
margin_top = -268.0
margin_right = -280.0
margin_bottom = 52.0
texture = ExtResource( 2 )
stretch_mode = 2

[node name="ScoreUI" type="Label" parent="."]
pause_mode = 2
margin_left = 280.0
margin_top = -268.0
margin_right = 472.0
margin_bottom = -112.0
custom_fonts/font = SubResource( 3 )
text = "SCORE"
autowrap = true

[node name="AudioDoorClose" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
mix_target = 2
bus = "SFX"

[node name="AudioEnemyDeath" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
mix_target = 2
bus = "SFX"

[node name="AudioMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
bus = "Music"

[node name="QueueFreeDoors" type="Node2D" parent="."]
visible = false
z_index = 150

[node name="IntroDoorL" type="Sprite" parent="QueueFreeDoors"]
position = Vector2( -480, 0 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 3 )

[node name="IntroDoorR" type="Sprite" parent="QueueFreeDoors"]
position = Vector2( 480, 0 )
scale = Vector2( 3.2, 3.2 )
texture = ExtResource( 5 )
